Fix flaky paint property test that relied on static state

PaintPropertyNodeTest.InitialStateAndReset had an expectation that the
initial root paint property state was changed. This could fail if the
test was run after another test that modified the root node's state.
This patch initializes the root node state to be unchanged.

Bug: 879017
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: If30731871ac8bffb66f8b3a387510e7e2d6fea56
Reviewed-on: https://chromium-review.googlesource.com/1196824
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587733}
Former-commit-id: 6203ef45d90eac9112bc977e8f3c0df27a100ace